scss/project/_header.scss
@use "../foundation/mixin" as *;

header {
    position: sticky;
    top: 0;
    left: 0;
    right: 0;
    z-index: 2;
    background-color: rgba(250, 250, 250);
}

.p-header {
    &__wrap {
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding: 15px 0;
    }

    &__logo {
        font-size: 24px;
        line-height: 1.5;
        font-family: 'Lato , sans-serif';
        font-weight: 700;


        @include mq-sp {
            font-size: 18px;
        }
    }

    &__hamburger {
        display: none;

        @include mq-sp {
            display: block;
            position: absolute;
            top: 16px;
            right: 16px;
            cursor: pointer;
            width: 28px;
            height: 22px;
            z-index: 10;

            span {
                transition: all .3s;
                position: absolute;
                height: 2px;
                background-color: #333;
                width: 100%;
                z-index: 10;
                left: 0;
                right: 0;

                &:nth-child(1) {
                    top: 0;
                }

                &:nth-child(2) {
                    top: 10px;
                }

                &:nth-child(3) {
                    bottom: 0;
                }
            }

            &.active {
                span {
                    &:nth-child(1) {
                        top: 10px;
                        transform: translateY(6px) rotate(-45deg);
                    }

                    &:nth-child(2) {
                        opacity: 0;
                    }

                    &:nth-child(3) {
                        top: 22px;
                        transform: translateY(-6px) rotate(45deg);
                    }
                }
            }

        }

    }



    &__global-list {
        list-style: none;
        display: flex;
        gap: 60px;
        align-items: center;

        @include mq-sp {
            position: fixed;
            top: 0;
            right: -100%;
            display: block;
            height: 100vh;
            width: 300px;
            padding: 32px;
            background-color: white;
            transition: all 0.5s;
            z-index: 3;
        }

        &.open {
            right: 0;
        }

    }

    &__global-item {
        font-size: 16px;
        line-height: 1.5;
        font-weight: 400;

        @include mq-sp {
            padding-bottom: 8px;
            padding-left: 8px;
            border-bottom: 1px solid black;
            margin-bottom: 48px;
            font-size: 15px;
        }
    }

    &__global-link {
        @media (hover: hover) and (pointer: fine) {
            &:hover {
                border-bottom: 1px solid #333;
            }
        }
    }
}

.menu-img {
    width: 39px;
    height: 39px;
}

